tests/paczka1/fuzzy1/46264995.err
Error in line 2: z5gLvosOhn A863 23,5
Error in line 7: VQ3W A863 12,6
Error in line 13: VQ3W S772 90,0
Error in line 22: ToZgze S842 -5,6
Error in line 20: i56HaVMqd A863 13,7
Error in line 38: dsk90j8hNSb A863 -2,4
